fixed dark mode toggle

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,11 +24,9 @@ html {
   --surface-shadow-light: var(--gray-8-hsl);
   --shadow-values-light: 0 1px 5px;
   --shadow-strength-light: 5%;
-  --gradient-light: linear-gradient(
-    55deg,
-    hsl(210deg 54% 55%) 20%,
-    hsl(210deg 50% 64%) 100%
-  );
+  --gradient-light: linear-gradient(55deg,
+      hsl(210deg 54% 55%) 20%,
+      hsl(210deg 50% 64%) 100%);
 
   /* dark */
   --brand-dark: hsl(226 38% 55% / 1);
@@ -43,11 +41,9 @@ html {
   --surface-shadow-dark: var(--gray-12-hsl);
   --shadow-values-dark: 0 3px 10px;
   --shadow-strength-dark: 40%;
-  --gradient-dark: linear-gradient(
-    55deg,
-    hsl(210deg 45% 45%) 20%,
-    hsl(210deg 40% 42%) 100%
-  );
+  --gradient-dark: linear-gradient(55deg,
+      hsl(210deg 45% 45%) 20%,
+      hsl(210deg 40% 42%) 100%);
 }
 
 :root {
@@ -89,7 +85,7 @@ html {
   }
 }
 
-[color-scheme="light"] {
+:root[color-scheme="light"] {
   color-scheme: light;
   --brand: var(--brand-light);
   --text1: var(--text1-light);
@@ -98,14 +94,14 @@ html {
   --surface2: var(--surface2-light);
   --surface3: var(--surface3-light);
   --surface4: var(--surface4-light);
-  --surfac5: var(--surface5-light);
+  --surface5: var(--surface5-light);
   --surface6: var(--surface6-light);
   --surface-shadow: var(--surface-shadow-light);
   --shadow-values: var(--shadow-values-light);
   --shadow-strength: var(--shadow-strength-light);
 }
 
-[color-scheme="dark"] {
+:root[color-scheme="dark"] {
   color-scheme: dark;
   --brand: var(--brand-dark);
   --text1: var(--text1-dark);
